--- a/contactserver/nginx.conf
+++ b/contactserver/nginx.conf
@@ -6,6 +6,8 @@ server {
 	root /usr/share/nginx/html;
 	index index.html index.htm index.php;
 
+	charset utf-8;
+
 	# Make site accessible from http://localhost/
 	server_name localhost;
 	
